@@ -8,6 +8,7 @@ license             = Perl_5
 -phase = runtime
 -relationship = requires
 Dist::Zilla = 5.009
+Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.004
 Dist::Zilla::Plugin::Git::NextVersion = 0
 ;Dist::Zilla::Plugin::EnsurePrereqsInstalled = 0
 Dist::Zilla::Plugin::PromptIfStale = 0.004
@@ -40,7 +41,6 @@ Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::PruneCruft = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::Git::Describe = 0
-Dist::Zilla::Plugin::PkgVersion = 5.010
 Dist::Zilla::Plugin::PodWeaver = 4.005
 Dist::Zilla::Plugin::NextRelease = 4.300018
 Dist::Zilla::Plugin::AutoMetaResources = 0
@@ -72,6 +72,7 @@ Dist::Zilla::Plugin::CopyFilesFromRelease = 0
 Dist::Zilla::Plugin::Run::AfterRelease = 0.031
 Dist::Zilla::Plugin::Git::Commit = 2.020
 Dist::Zilla::Plugin::Git::Tag = 0
+Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.004
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::CheckIssues = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
