@@ -37,6 +37,7 @@ use NoPrereqChecks;
                             'Git::Remote::Check', 'PromptIfStale', 'EnsurePrereqsInstalled' ],
                         server => 'none',
                         installer => 'MakeMaker',
+                        'RewriteVersion::Transitional.skip_version_provider' => 1,
                       },
                     ],
                 ),
@@ -108,6 +109,7 @@ SKIP: {
                             'Git::Remote::Check', 'PromptIfStale', 'EnsurePrereqsInstalled' ],
                         server => 'none',
                         installer => [ qw(MakeMaker ModuleBuildTiny) ],
+                        'RewriteVersion::Transitional.skip_version_provider' => 1,
                       },
                     ],
                 ),
